tests/ok/package-cache-body-main.ari
mod cache_bodies;

fn main() -> i64 {
  cache_bodies::return_value() +
    cache_bodies::final_value() +
    cache_bodies::expression_statement() +
    cache_bodies::local_flow(true) +
    cache_bodies::local_flow(false) +
    cache_bodies::labeled_block(true) +
    cache_bodies::labeled_block(false)
}
