tests/errors/meta-function-ast-input-reference.ari
meta fn wrap(input: ast) -> ast {
  return input + 1;
}

fn main() -> i64 {
  return wrap!(41);
}
